# uri

./: .gitignore  Cargo.toml
src/: authority.rs  encoder.rs  error.rs  fragment.rs  lib.rs  path.rs  query.rs  rpart.rs  scheme.rs  uri.rs
tests/: authority.rs  uri.rs
